{
    "name": "GameControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "bbec0846-0b6b-4cb1-a121-98ec92a3456e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "c6e26b4e-4f6a-466c-a306-99b73fff1096",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a836e91c-80b7-4d8b-940c-6e9f567eae84",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crounch",
                    "type": "Button",
                    "id": "ba8f473c-1280-441f-a032-95968225caf7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Power_Switch",
                    "type": "Button",
                    "id": "bc5c1821-eb32-4256-9881-c96cc0ebb26b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Power_01",
                    "type": "Button",
                    "id": "4bb2bb3f-76a5-40b8-95fd-39ea2b243a77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Power_02",
                    "type": "Button",
                    "id": "7fe4cc17-5d75-4d5b-b084-43667dfb6a88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Base_Attack",
                    "type": "Button",
                    "id": "a107dd68-9989-4ca0-a1e7-42ecc5b5f82b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "cb609316-372b-48be-a332-2fb0100d19e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "KeyBoard",
                    "id": "207ffd58-60b3-4d7c-94c9-24dedec1319b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "dd109651-cb33-4578-99f6-edbabdb7d799",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "69215764-e609-42cf-bccb-659d0b083142",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Controller",
                    "id": "3a9693f6-1015-41e5-963d-9f32879d86e8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0f5ccab1-6c73-46af-a5e0-e6e7a22671b4",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e3573623-1356-4d10-a7a8-d3b4ecdea317",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e1703ead-d9cb-47ca-a4b0-98adccb8c532",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7362d0ed-8878-4d6f-a0b5-147af3e2efae",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c478889-7d2a-4ac6-80e9-08875ba1065b",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crounch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "079a0612-3378-4b20-9a7b-cda0d4123026",
                    "path": "<XInputController>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crounch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef05d8d7-bd33-4250-a3ac-258183bc011e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Power_01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2553c21f-89f8-44ae-bc26-03c2995eef9c",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Power_01",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7442d53e-403f-4b3f-988e-bccec5e810fa",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Power_02",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6678741d-8344-47fd-82e4-b7d21d70df87",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Power_02",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec36c426-e08c-45eb-a300-f03735f61221",
                    "path": "<Keyboard>/r",
                    "interactions": "Hold(duration=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "Base_Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8669fa0-4f2c-459d-9224-de7f2e600504",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "Hold(duration=0.4)",
                    "processors": "",
                    "groups": "",
                    "action": "Base_Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9acb530-bfb5-4a1b-a146-97de2721406d",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Power_Switch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "169be454-1850-4551-9a86-6af1339620d8",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Power_Switch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ec6d4f2-7551-4116-9f57-9bb5c79b9800",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Power_Switch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "58455f9e-a245-4e06-b9ea-aa2f45dd7787",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Power_Switch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88981e03-4406-4cea-969f-7ad6285b93e7",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a858546-474e-4729-803e-785d92b03c3c",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "4ce14337-e121-4699-8b16-dae9d181318c",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "5af8d689-a5ce-44e6-b46e-a5ae4f184a03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6e9f6c1a-8dd7-49b2-a156-8d8bc533b29a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}